Sun Nov 12 15:16:40 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now uses giblib. You'll need the very latest giblib from CVS as
	of right now.

Sun Nov  5 02:17:57 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Beep when about to take the shot.
	* Added -b, --border to grab wm borders too.
	* Ungrab mouse, keyboard before sleeping for --delay.
	* -e 'feh &f' is not intuitive. Can't use '%' cos that's reserved
	for strftime, so now the internal format specifiers are prefixed
	'$'. Trouble is, you now _must_ use '', not "", or the shell will
	interpret the $ sign and perform variable
	substiution. Suggestions?
	* Purged boring debugging shit.

Mon Oct 30 18:54:05 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* I can't be arsed to type all this again, so here's the new
	manpage entrys:
	* If [file] is not specified, a date-stamped file will be
	dropped in the current directory.
	* SPECIAL STRINGS
	Both the --exec and filename parameters  can  take  format
        specifiers  that  are  expanded by scrot when encountered.
        There are two types of format specifier.  Characters  pre-
        ceded  by  a  '%' are interpretted by strftime(2). See man
        strftime for examples.  These options may be used to refer
        to  the current date and time.  The second kind are inter-
        nal to scrot and are prefixed by '&' The following  speci-
        fiers are recognised:
        &f image path/filename (ignored when used in the filename)
        &n image name (ignored when used in the filename)
        &s image size (bytes) (ignored when used in the filename)
        &p image pixel size
        &w image width
        &h image height
        &t image format
        && prints a literal '&'
        \n prints a newline (ignored when used in the filename)
        EXAMPLE
        scrot '%Y-%m-%d_&wx&h.png' -e 'mv &f ~/shots/'
        This  would  create   a   file   called   something   like