@@ -37,6 +37,9 @@ Exec APP on the saved image.
 Image quality (1-100) high value means high size, low compression. Default:
 75. (Effect differs depending on file format chosen).
 .TP 5
+.B -m, --multidisp
+For multiple heads, grab shot from each and join them together.
+.TP 5
 .B -s, --select
 Interactively select a window or rectangle with the mouse.
 .SH SPECIAL STRINGS
